# python-dycasbin

./: README.md  pyproject.toml
python_dycasbin/: adapter.py  test_adapter.py
python_dycasbin/e2e/: test_management.py  test_rbac.py
tests/e2e/: test_management.py  test_rbac.py  test_rbac_domains.py
tests/unit/: test_adapter.py
