[project]
name = "python-dycasbin"
version = "0.4.2"
description = "DynamoDB adopter for casbin"
readme = "README.md"
authors = [
    { name = "Abdul Qadeer", email = "abqdr.is@gmail.com" },
    { name = "Dan Shirts", email = "dan@ecobattery.com" }
]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.0,<2",
    "cachetools>=6.2.0,<7",
    "casbin>=1.14.0,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "boto3-stubs>=1.40.0,<2",
    "types-cachetools",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".vscode",
    ".pytest_cache",
    ".build",
    ".mypy_cache",
    ".github"
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [ "E203", "E266", "E501", "W191", "C901"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
